# csci-366-spring2022-private

./: README.md
c/lmsm/: CMakeLists.txt  README.md
c/lmsm/examples/: recursive_fun.lmsm  square_fun.lmsm
c/lmsm/googletest/: CMakeLists.txt  assembler.cpp  lmsm.cpp
c/lmsm/src/: assembler.c  assembler.h  lmsm.c  lmsm.h  repl.c
cloud/: README.md  pom.xml
cloud/src/main/java/edu/montana/csci/csci366/strweb/: StringWeb.java
cloud/src/main/java/edu/montana/csci/csci366/strweb/ops/: CloudSha256Transformer.java  LineLengthTransformer.java  Sha256Transformer.java  Sorter.java
cloud/src/test/java/edu/montana/csci/csci366/strweb/ops/: LineLengthTransformerTest.java  Sha256TransformerTest.java  SorterTest.java  TestingUtils.java
grading/: cloud_results.txt  lmsm_emulator_tests.txt  lmsm_tests.txt  project_1_results.txt
grading/scripts/: autograde.rb  students.csv
